# DarkGPT

./: Makefile  OPENAI_MODERNIZATION_EXECPLAN.md  PLANS.md  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/agents/: darkgpt-workflow.agent.md
.github/instructions/: darkgpt-python.instructions.md
darkgpt/: DarkAgent.py  __init__.py  cli.py  dehashed_api.py  functions.py  main.py  main_1.py
darkgpt_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dark_agent.py  test_import.py
