[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darkgpt-wrapper"
version = "0.0.1"
description = "Lightweight wrapper package exposing DarkGPT project modules"
authors = [ { name = "local", email = "" } ]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["darkgpt","osint","wrapper"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
darkgpt = "darkgpt.main:main"

[tool.setuptools.packages.find]
include = ["darkgpt*"]
