[metadata]
name = darkgpt-wrapper
version = 0.0.1
description = Lightweight wrapper package exposing DarkGPT project modules
long_description = file: README.md
long_description_content_type = text/markdown
author = local
author_email =
keywords = darkgpt, osint, wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    openai==1.13.3
    requests>=2.31.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=8.0.0

[options.packages.find]
include = darkgpt*

[options.entry_points]
console_scripts =
    darkgpt = darkgpt.main:main
